Set up some things and rename the mod

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.jvmargs = -Xmx5G
 org.gradle.parallel = true
 
 # Mod
-mod.id = tattletail
-mod.name = Tattletail
+mod.id = waygetter
+mod.name = Waygetter Electronics
 mod.description = Adds Tattletail to Minecraft!
 mod.version = 1.0.0
 mod.license = MIT
