Improve the flashlight via Veil and fix some things

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ deps.1.21.1.parchment = 2024.11.17
 deps.1.21.1.fabric_api = 0.116.7+1.21.1
 deps.1.21.1.mod_menu = 11.0.3
 deps.1.21.1.geckolib = 4.8.2
+deps.1.21.1.veil = 2.5.1
 deps.1.21.1.minecraft_range = >=1.21 <=1.21.1
 deps.1.21.1.minecraft_lists = 1.21, 1.21.1
 
