Fix the food being too fast

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.parallel = true
 mod.id = waygetter
 mod.name = Waygetter Electronics
 mod.description = Adds Tattletail to Minecraft!
-mod.version = 1.0.0
+mod.version = 1.0.0-beta
 mod.license = MIT
 mod.modrinthId = - TODO
 mod.curseforgeId = - TODO
