Ready up for the first release

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ mod.name = Waygetter Electronics
 mod.description = Adds Tattletail to Minecraft!
 mod.version = 1.0.0-beta
 mod.license = MIT
-mod.modrinthId = - TODO
-mod.curseforgeId = - TODO
+mod.modrinthId = U1Cnjvr0
+mod.curseforgeId = 1406194
 
 # Dependencies
 deps.fabric_loader = 0.17.2
